--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,27 +36,6 @@ repos:
     hooks:
       - id: add-trailing-comma
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.17.0
-    hooks:
-      - id: pyupgrade
-        args:
-          - --py39-plus
-
-  - repo: https://github.com/psf/black
-    rev: 24.8.0
-    hooks:
-      - id: black
-
-  - repo: https://github.com/pycqa/flake8
-    rev: 7.1.0
-    hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-docstrings==1.6.0
-        args:
-          - --ignore=E501,W503
-
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.5.6
     hooks:
@@ -64,6 +43,7 @@ repos:
         args:
           - --fix
           - --ignore=E501
+      - id: ruff-format
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.3.0
